--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'com.android.tools.build:gradle:7.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -41,17 +41,21 @@ task clean(type: Delete) {
 
 ext {
     compileSdkVersion = 31
-    minSdkVersion = 15
+    minSdkVersion = 21
     targetSdkVersion = 31
-    supportLibVersion = '1.4.0'
+    supportLibVersion = '1.4.1'
     coreVersion = '1.7.0'
     recyclerViewVersion = '1.2.1'
-    constraintLayoutVersion = '2.1.2'
-    materialVersion = '1.4.0'
+    constraintLayoutVersion = '2.1.3'
+    materialVersion = '1.5.0'
     lifecycleVersion = '2.4.0'
-    roomVersion = '2.3.0'
+    roomVersion = '2.4.1'
     pagingVersion = '3.1.0'
     retrofitVersion = '2.9.0'
-    okhttpLoggingInterceptorVersion = '4.9.0'
-    coroutines = '1.5.2'
+    okhttpLoggingInterceptorVersion = '5.0.0-alpha.3'
+    coroutines = '1.6.0-native-mt'
+
+    nav_version = '2.5.0-alpha01'
+
 }
+
