--- a/build.gradle
+++ b/build.gradle
@@ -43,15 +43,15 @@ ext {
     compileSdkVersion = 31
     minSdkVersion = 15
     targetSdkVersion = 31
-    supportLibVersion = '1.4.0'
+    supportLibVersion = '1.4.1'
     coreVersion = '1.7.0'
     recyclerViewVersion = '1.2.1'
-    constraintLayoutVersion = '2.1.2'
-    materialVersion = '1.4.0'
-    lifecycleVersion = '2.4.0'
-    roomVersion = '2.3.0'
+    constraintLayoutVersion = '2.1.3'
+    materialVersion = '1.5.0'
+    lifecycleVersion = '2.4.1'
+    roomVersion = '2.4.2'
     pagingVersion = '3.1.0'
     retrofitVersion = '2.9.0'
-    okhttpLoggingInterceptorVersion = '4.9.0'
-    coroutines = '1.5.2'
+    okhttpLoggingInterceptorVersion = '5.0.0-alpha.5'
+    coroutines = '1.6.0-native-mt'
 }
